<resources>
    <string name="app_name">MifosXDroid</string>
    <string name="mifos_account">Mifos Account</string>
    <string name="enter_credentials"><b>Please enter your credentials.</b></string>
    <string name="datatables">DataTable</string>
    <string name="associated_datatables">Associated Datatables</string>
    <string name="login">Login</string>
    <string name="logout_successfully">Logged out successfully</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="test_ip" translatable="false">10.0.2.2</string>
    <string name="search">Search</string>
    <string name="group_name">Group Name</string>
    <string name="staff_name">Staff Name</string>
    <string name="level_name">Level Name</string>
    <string name="offline">Offline Sync *</string>
    <string name="search_hint">Name or Account Number or External Id</string>
    <string name="search_results">Search Results</string>
    <string name="client_search">Client Search</string>
    <string name="total">Total</string>
    <string name="client_name">Client Name</string>
    <string name="client">Client</string>
    <string name="save">Save</string>
    <string name="due_date">Due Date</string>
    <string name="locale">Locale</string>
    <string name="confirm_delete_client_image">Are you sure you want to delete this client\'s image?</string>
    <string name="default_instance_url" translatable="false">demo.openmf.org</string>
    <string name="review_transaction">Review Transaction</string>
    <string name="amount">Amount</string>
    <string name="date">Date:</string>
    <string name="date_colon">Date:</string>
    <string name="payment_type">Payment Type</string>
    <string name="mifos_instance_domain">Mifos Instance Domain</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mifos" translatable="false">Mifos</string>
    <string name="full_name">Name</string>
    <string name="account_number">Account Number</string>
    <string name="external_id">External ID</string>
    <string name="loanproduct">Loan Product</string>
    <string name="loantype">Loan Type</string>
    <string name="principal">Principal</string>
    <string name="loanterm">Loan Term</string>
    <string name="loanterm_month">Select Loan Term</string>
    <string name="nominal">Nominal annual interest </string>
    <string name="submittedon">Submitted On</string>
    <string name="activation_date">Activation Date</string>
    <string name="office">Office</string>
    <string name="group">Group</string>
    <string name="cancel">Cancel</string>
    <string name="review_payment">Review Payment</string>
    <string name="survey">Survey</string>
    <string name="center_name">Center Name</string>
    <string name="center_id">Center Id</string>
    <string name="create_client">Create Client</string>
    <string name="create_savings_account">Add Savings Account</string>
    <string name="create_loan_account">Loan Application</string>
    <string name="create_loan_terms">Loan Terms</string>
    <string name="create_center">Create Center</string>
    <string name="create_group">Create Group</string>
    <string name="create_identifier">Create Identifier</string>
    <string name="staff_id">Staff Id</string>
    <string name="office_id">Office Id</string>
    <string name="id">ID</string>
    <string name="charge_id">Charge Id</string>
    <string name="transactions">Transactions</string>
    <string name="name">Name</string>
    <string name="charge_name">Charge Name</string>
    <string name="description">Description</string>
    <string name="file_name">File Name</string>
    <string name="file_location">Location</string>
    <string name="documents">Documents</string>
    <string name="upload_sign">Upload Signature</string>
    <string name="no_document_to_show">There is No Documents to Show</string>
    <string name="no_identifier_to_show">There is No Identifier to Show</string>
    <string name="approve_savings">Approve Savings</string>
    <string name="activate_savings">Activate Savings</string>
    <string name="activate_client">Activate Client</string>
    <string name="activate_center">Activate Center</string>
    <string name="activate_group">Activate Group</string>
    <string name="activate">Activate</string>
    <string name="client_activated_successfully">Client Activated Successfully</string>
    <string name="center_activated_successfully">Center Activated Successfully</string>
    <string name="group_created_successfully">Group Activated Successfully</string>
    <string name="loan_disburse_successfully">Loan Successfully Disbursed</string>
    <string name="center_created_successfully">Center created successfully</string>
    <string name="savings_account_closed">Savings Account Closed</string>
    <string name="savings_account_activated">Savings Account Activated</string>
    <string name="more_info">More client info</string>
    <string name="more_group_info">More group Info</string>
    <string name="pinpoint">Pinpoint location</string>
    <string name="charges">Charges </string>
    <string name="add_loan">Add Loan Account</string>
    <string name="savings_account">Add Savings Account</string>
    <string name="savings_account_id">Savings Account Id</string>
    <string name="collection_sheet">Collection Sheet</string>
    <string name="individual_collection_sheet">Individual Collection Sheet</string>
    <string name="title_activity_generate_collection_sheet" translatable="false">Generate Collection Sheet</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="center">Center</string>
    <string name="generate_collection_sheet">Generate Collection Sheet</string>
    <string name="clear_data">Clear Data</string>
    <string name="branch_id">Branch Id</string>
    <string name="clients">Clients</string>
    <string name="groups">Groups</string>
    <string name="centers">Centers</string>
    <string name="settings">Settings</string>
    <string name="surveys">Surveys</string>
    <string name="path_tracker">Path Tracker</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hide">Hide</string>
    <string name="colon" translatable="false">" : "</string>
    <string name="backspace_slash" translatable="false">\</string>
    <string name="slash" translatable="false">/</string>
    <string name="space" translatable="false">" "</string>
    <string name="new_line" translatable="false">\n</string>
    <string name="field">Field</string>
    <string name="value">Value</string>
    <string name="survey_subtitle" translatable="false">0/0</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="question">Question</string>
    <string name="submitting_surveys">Submitting Survey</string>
    <string name="scorecard_created_successfully">Scorecard created successfully</string>
    <string name="survey_successfully_submitted">Survey Successfully Submitted !
        \n Thanks for taking Survey </string>
    <string name="please_attempt_atleast_one_question">Please Attempt AtLeast One Question </string>
    <string name="attempt_question">Attempt Questions : </string>
    <string name="empty_client_list">Empty ClientList</string>
    <string name="empty_group_clients">Empty Group ClientList</string>
    <string name="empty_groups_list">Empty GroupList</string>
    <string name="empty_groups">No group associated with this center</string>
    <string name="empty_center_list">Empty CenterList</string>
    <string name="empty_path_tracking">Empty Path Tracking</string>
    <string name="empty_data_table">Empty DataTable</string>
    <string name="savings_account_submitted_for_approval">The Savings Account has been submitted for
        Approval</string>
    <string name="package_name">Package Name</string>
    <string name="document_directory" translatable="false">/mifos/documents/</string>
    <string name="open_document">Open Document</string>
    <string name="document_remove_successfully">Document Removed Successfully</string>
    <string name="document_fetch_successfully">Document Fetch Successfully</string>
    <string name="update_document">Update Document</string>
    <string name="document_updated_successfully">%1$s Document Updated Successfully</string>
    <string name="document_dialog" translatable="false">"Document Dialog</string>
    <string name="document_type">Document Type</string>
    <string-array name="status">
        <item>Active</item>
        <item>InActive</item>
    </string-array>
    <string name="unique_id">Unique Id</string>
    <string name="identifier_created_successfully">Identifier Created Successfully</string>
    <string name="empty_identifier_document_type">Identifier Document Type ID is Empty \n
        or May be, Identifier Template couldn\'t to be fetched. Please Check your Internet
    Connection</string>
    <string name="data_table_entry_added">DataTable entry added successfully</string>
    <string name="unique_id_required">Unique Id is required!</string>
    <string name="update">Update</string>
    <string name="group_clients">Group Clients</string>
    <string name="identifier_deleted_successfully">Identifier deleted Successfully</string>
    <string name="exact_match">Exact Match</string>
    <string name="no_search_result_found">No results found for entered query</string>
    <string name="no_search_query_entered">No Search Query Entered!</string>
    <string name="client_created_successfully">Client Created Successfully</string>
    <string name="waiting_for_checker_approval">Waiting for Checker\'s Approval</string>
    <string name="no_staff_associated_with_office">No Staff associated with this Office</string>
    <string name="adding_client_address">Adding Client Address</string>
    <string name="updating_client_address">Updating Client Address</string>
    <string name="deleting_client_address">Deleting Client Address</string>
    <string name="address_added_successfully">Address Added Successfully</string>
    <string name="address_deleted_successfully">Address Deleted Successfully</string>
    <string name="address_updated_successfully">Address Updated Successfully</string>
    <string name="google_play_services_not_available">Google Play Services is not available.</string>
    <string name="empty_client_address">Empty Address List</string>
    <string name="mifos_path_tracker">Mifos Path Tracker</string>
    <string name="description_location_tracking">Location tracking starts now</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="browse">Browse</string>
    <string name="selected_file">Selected File</string>
    <string name="found_sheet">Found Collection Sheet</string>
    <string name="save_sheet_text">You Can Save this Collection Sheet for Offline Use also.</string>
    <string name="fill_now">Fill Now</string>
    <string name="members">Members:</string>
    <string name="generate_new">Generate New</string>
    <string name="generate">Generate</string>
    <string name="fill_collection_sheet_message">Please fill in appropriate details to find the collection sheet to generate.</string>
    <string name="clear">Clear</string>
    <string name="loan_amount_disbursed">Amount Disbursed</string>
    <string name="repayment_date">Repayment Date</string>
    <string name="approval_disbursement_date">Expected disbursement on</string>
    <string name="approved_on">Approved On*</string>
    <string name="approvedamount">Approved Amount</string>
    <string name="transaction_amount">Transaction amount*</string>
    <string name="approval_note">Note</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="upload_document">Upload Document</string>
</resources>