<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->
<ScrollView style="@style/ScrollView.Base">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/LinearLayout.Base"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_loan_approval_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/approved_on"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_loan_approval_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/tv_expected_disbursement_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/approval_disbursement_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_expected_disbursement_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/light_grey" />

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInput.Base">

            <EditText
                android:id="@+id/et_approved_amount"
                style="@style/EditText.BaseWidth"
                android:gravity="start"
                android:hint="@string/approvedamount"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInput.Base">

            <EditText
                android:id="@+id/et_transaction_amount"
                style="@style/EditText.BaseWidth"
                android:gravity="start"
                android:hint="@string/transaction_amount"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInput.Base">

            <EditText
                android:id="@+id/et_approval_note"
                style="@style/EditText.BaseWidth"
                android:gravity="start"
                android:hint="@string/approval_note"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_approve_loan"
            style="@style/Button.Base"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_rounded"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>