<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_disburse"
    style="@style/LinearLayout.Base"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/tv_disburse_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/approval_disbursement_date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_loan_disbursement_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey" />

    <com.google.android.material.textfield.TextInputLayout style="@style/TextInput.Base">

        <EditText
            android:id="@+id/et_disbursed_amount"
            style="@style/EditText.BaseWidth"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:hint="@string/loan_amount_disbursed"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/payment_type"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/sp_loan_payment_type"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        android:backgroundTint="@color/gray_dark"
        android:spinnerMode="dropdown" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <com.google.android.material.textfield.TextInputLayout style="@style/TextInput.Base">

        <EditText
            android:id="@+id/et_disbursement_note"
            style="@style/EditText.BaseWidth"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:hint="@string/approval_note"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_disburse_loan"
        style="@style/Button.Base"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_button_rounded"
        android:text="@string/submit" />
</LinearLayout>